--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>256</width>
-    <height>286</height>
+    <width>312</width>
+    <height>317</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,70 +19,47 @@
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
    </property>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>0</y>
-      <width>181</width>
-      <height>19</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Uploader selection:</string>
-    </property>
-   </widget>
-   <widget class="QListWidget" name="uploaderList">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>20</y>
-      <width>251</width>
-      <height>192</height>
-     </rect>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="nameScheme">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>230</y>
-      <width>251</width>
-      <height>27</height>
-     </rect>
-    </property>
-    <property name="toolTip">
-     <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
-    </property>
-    <property name="text">
-     <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>210</y>
-      <width>141</width>
-      <height>19</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>File name scheme:</string>
-    </property>
-   </widget>
+   <layout class="QVBoxLayout" name="verticalLayout_2">
+    <item>
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Uploader selection:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QListWidget" name="uploaderList"/>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>File name scheme:</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLineEdit" name="nameScheme">
+      <property name="toolTip">
+       <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
+      </property>
+      <property name="text">
+       <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>256</width>
+     <width>312</width>
      <height>24</height>
     </rect>
    </property>
