--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>471</width>
-    <height>315</height>
+    <width>512</width>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -56,13 +56,6 @@
       </property>
      </widget>
     </item>
-    <item row="5" column="1">
-     <widget class="QLabel" name="label_4">
-      <property name="text">
-       <string>s</string>
-      </property>
-     </widget>
-    </item>
     <item row="1" column="0">
      <widget class="QListWidget" name="uploaderList"/>
     </item>
@@ -76,6 +69,36 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="1">
+     <spacer name="horizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>40</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="5" column="1">
+     <widget class="QLabel" name="label_4">
+      <property name="text">
+       <string>s</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>Hotkeys</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="2" rowspan="5">
+     <widget class="QListWidget" name="hotkeys"/>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -83,7 +106,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>471</width>
+     <width>512</width>
      <height>24</height>
     </rect>
    </property>
