--- a/icon.qrc
+++ b/icon.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>icons/icon.jpg</file>
+        <file>icons/icon.png</file>
     </qresource>
 </RCC>
