Fix an annoying focus thing

--- a/cropeditor/settings/brushpenselection.ui
+++ b/cropeditor/settings/brushpenselection.ui
@@ -10,6 +10,9 @@
     <height>262</height>
    </rect>
   </property>
+  <property name="focusPolicy">
+   <enum>Qt::StrongFocus</enum>
+  </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
