--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>512</width>
-    <height>337</height>
+    <height>368</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,42 +25,19 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="7" column="0" colspan="2">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Uploader selection:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0" colspan="2">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>&lt;a href=&quot;https://github.com/ArsenArsen/KShare&quot;&gt;Source code available free for everyone. Forever.&lt;/a&gt;
 
 </string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="1" rowspan="5">
-     <widget class="QListWidget" name="hotkeys"/>
-    </item>
-    <item row="5" column="0">
-     <widget class="QDoubleSpinBox" name="delay">
-      <property name="toolTip">
-       <string>In seconds</string>
-      </property>
-      <property name="whatsThis">
-       <string>A delay before taking a screenshot, in seconds</string>
-      </property>
-      <property name="suffix">
-       <string>s</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="label_2">
-      <property name="text">
-       <string>File name scheme:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="0">
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>Uploader selection:</string>
       </property>
      </widget>
     </item>
@@ -78,19 +55,6 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0">
-     <widget class="QListWidget" name="uploaderList"/>
-    </item>
-    <item row="3" column="0">
-     <widget class="QLineEdit" name="nameScheme">
-      <property name="toolTip">
-       <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
-      </property>
-      <property name="text">
-       <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date</string>
-      </property>
-     </widget>
-    </item>
     <item row="6" column="0">
      <widget class="QCheckBox" name="quickMode">
       <property name="text">
@@ -102,6 +66,49 @@
      <widget class="QPushButton" name="settingsButton">
       <property name="text">
        <string>Open settings directory</string>
+      </property>
+     </widget>
+    </item>
+    <item row="3" column="0">
+     <widget class="QLineEdit" name="nameScheme">
+      <property name="toolTip">
+       <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
+      </property>
+      <property name="text">
+       <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date</string>
+      </property>
+     </widget>
+    </item>
+    <item row="5" column="0">
+     <widget class="QDoubleSpinBox" name="delay">
+      <property name="toolTip">
+       <string>In seconds</string>
+      </property>
+      <property name="whatsThis">
+       <string>A delay before taking a screenshot, in seconds</string>
+      </property>
+      <property name="suffix">
+       <string>s</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1" rowspan="5">
+     <widget class="QListWidget" name="hotkeys"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label_2">
+      <property name="text">
+       <string>File name scheme:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QListWidget" name="uploaderList"/>
+    </item>
+    <item row="7" column="0" colspan="2">
+     <widget class="QCheckBox" name="hideToTray">
+      <property name="text">
+       <string>Pressing &lt;X&gt; hides to tray</string>
       </property>
      </widget>
     </item>
