--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>512</width>
-    <height>412</height>
+    <width>483</width>
+    <height>478</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -25,7 +25,10 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="9" column="1">
+    <item row="15" column="1">
+     <widget class="QComboBox" name="imageFormatBox"/>
+    </item>
+    <item row="12" column="1" rowspan="2">
      <widget class="QComboBox" name="formatBox">
       <property name="currentIndex">
        <number>-1</number>
@@ -70,7 +73,7 @@
       </property>
      </widget>
     </item>
-    <item row="11" column="0" colspan="2">
+    <item row="16" column="0" colspan="2">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>&lt;a href=&quot;https://github.com/ArsenArsen/KShare&quot;&gt;Source code available free for everyone. Forever.&lt;/a&gt;
@@ -112,24 +115,31 @@
     <item row="1" column="0">
      <widget class="QListWidget" name="uploaderList"/>
     </item>
-    <item row="9" column="0">
-     <widget class="QCheckBox" name="captureCursor">
+    <item row="13" column="0">
+     <widget class="QLabel" name="label_4">
       <property name="text">
-       <string>Capture cursor</string>
+       <string>Recording format</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="0">
+    <item row="15" column="0">
+     <widget class="QLabel" name="label_7">
+      <property name="text">
+       <string>Still image format</string>
+      </property>
+     </widget>
+    </item>
+    <item row="8" column="0" colspan="2">
      <widget class="QCheckBox" name="hideToTray">
       <property name="text">
        <string>Pressing &lt;X&gt; hides to tray</string>
       </property>
      </widget>
     </item>
-    <item row="7" column="1" rowspan="2">
-     <widget class="QLabel" name="label_4">
+    <item row="7" column="0" colspan="2">
+     <widget class="QCheckBox" name="captureCursor">
       <property name="text">
-       <string>Recording format</string>
+       <string>Capture cursor</string>
       </property>
      </widget>
     </item>
@@ -140,7 +150,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>512</width>
+     <width>483</width>
      <height>25</height>
     </rect>
    </property>
