--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -25,16 +25,6 @@
     </sizepolicy>
    </property>
    <layout class="QGridLayout" name="gridLayout">
-    <item row="15" column="1">
-     <widget class="QComboBox" name="imageFormatBox"/>
-    </item>
-    <item row="12" column="1" rowspan="2">
-     <widget class="QComboBox" name="formatBox">
-      <property name="currentIndex">
-       <number>-1</number>
-      </property>
-     </widget>
-    </item>
     <item row="3" column="0">
      <widget class="QLineEdit" name="nameScheme">
       <property name="toolTip">
@@ -73,7 +63,7 @@
       </property>
      </widget>
     </item>
-    <item row="16" column="0" colspan="2">
+    <item row="17" column="0" colspan="2">
      <widget class="QLabel" name="label_6">
       <property name="text">
        <string>&lt;a href=&quot;https://github.com/ArsenArsen/KShare&quot;&gt;Source code available free for everyone. Forever.&lt;/a&gt;
@@ -102,6 +92,9 @@
       </property>
      </widget>
     </item>
+    <item row="1" column="0">
+     <widget class="QListWidget" name="uploaderList"/>
+    </item>
     <item row="1" column="1" rowspan="5">
      <widget class="QListWidget" name="hotkeys"/>
     </item>
@@ -111,9 +104,6 @@
        <string>File name scheme:</string>
       </property>
      </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QListWidget" name="uploaderList"/>
     </item>
     <item row="13" column="0">
      <widget class="QLabel" name="label_4">
@@ -140,6 +130,23 @@
      <widget class="QCheckBox" name="captureCursor">
       <property name="text">
        <string>Capture cursor</string>
+      </property>
+     </widget>
+    </item>
+    <item row="15" column="1">
+     <widget class="QComboBox" name="imageFormatBox"/>
+    </item>
+    <item row="12" column="1" rowspan="2">
+     <widget class="QComboBox" name="formatBox">
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+    <item row="16" column="0" colspan="2">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Encoder settings</string>
       </property>
      </widget>
     </item>
