Move settings to a seperate dialog, add about box
It contains licensing information!

--- a/icon.qrc
+++ b/icon.qrc
@@ -1,5 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>icons/icon.png</file>
+        <file>icons/icon.svg</file>
     </qresource>
 </RCC>
