--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -91,7 +91,7 @@
       <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
      </property>
      <property name="text">
-      <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date</string>
+      <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date.%ext</string>
      </property>
     </widget>
    </item>
