--- a/settingsdialog.ui
+++ b/settingsdialog.ui
@@ -88,7 +88,7 @@
    <item row="3" column="1">
     <widget class="QLineEdit" name="nameScheme">
      <property name="toolTip">
-      <string>http://doc.qt.io/qt-5/qdatetime.html#toString</string>
+      <string>%(date format)date and %ext are supported</string>
      </property>
      <property name="text">
       <string>Screenshot %(yyyy-MM-dd HH:mm:ss)date.%ext</string>
@@ -126,7 +126,7 @@
    <item row="0" column="1">
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>Uploader selection:</string>
+      <string>Destination:</string>
      </property>
     </widget>
    </item>
